chore: 문자열 리드미 수정

--- a/v2/백준/문자열/문자열.md
+++ b/v2/백준/문자열/문자열.md
@@ -1,14 +1,14 @@
 ### 백준
 
-6550 실5 [부분 문자열](https://www.acmicpc.net/problem/6550)
+6550 실5 [부분 문자열](https://www.acmicpc.net/problem/6550) o
 
-1764 실4 [듣보잡](https://www.acmicpc.net/problem/1764)
+1764 실4 [듣보잡](https://www.acmicpc.net/problem/1764) o
 
-20291 실3 [파일 정리](https://www.acmicpc.net/problem/20291)
+20291 실3 [파일 정리](https://www.acmicpc.net/problem/20291) o
 
-3005 실2 [크로스워드 퍼즐 쳐다보기](https://www.acmicpc.net/problem/3005)
+3005 실2 [크로스워드 퍼즐 쳐다보기](https://www.acmicpc.net/problem/3005) o
 
-13022 실2 [늑대와 올바른 단어](https://www.acmicpc.net/problem/13022)
+13022 실2 [늑대와 올바른 단어](https://www.acmicpc.net/problem/13022) x
 
 17609 골5 [회문](https://www.acmicpc.net/problem/17609)
 
