--- a/v2/백준/문자열/문자열.md
+++ b/v2/백준/문자열/문자열.md
@@ -10,8 +10,8 @@
 
 13022 실2 [늑대와 올바른 단어](https://www.acmicpc.net/problem/13022) x
 
-17609 골5 [회문](https://www.acmicpc.net/problem/17609)
+17609 골5 [회문](https://www.acmicpc.net/problem/17609) x
 
-20437 골5 [문자열 게임2](https://www.acmicpc.net/problem/20437)
+20437 골5 [문자열 게임2](https://www.acmicpc.net/problem/20437) x
 
 20210 골2 [파일 탐색기](https://www.acmicpc.net/problem/20210)
