chore: 문자열 리드미 수정

--- a/v2/백준/문자열/문자열.md
+++ b/v2/백준/문자열/문자열.md
@@ -14,4 +14,4 @@
 
 20437 골5 [문자열 게임2](https://www.acmicpc.net/problem/20437) x
 
-20210 골2 [파일 탐색기](https://www.acmicpc.net/problem/20210)
+2671 골5 [잠수함 식별](https://www.acmicpc.net/problem/2671) x
