feat: 1260 DFS와 BFS

--- a/v2/백준/그래프/그래프.md
+++ b/v2/백준/그래프/그래프.md
@@ -2,7 +2,7 @@
 
 2606 실3 [바이러스](https://www.acmicpc.net/problem/2606) x
 
-1260 실2 [DFS와 BFS](https://www.acmicpc.net/problem/1260)
+1260 실2 [DFS와 BFS](https://www.acmicpc.net/problem/1260) o
 
 1325 실1 [효율적인 해킹](https://www.acmicpc.net/problem/1325)
 
