feat: 14940 쉬운 최단거리

--- a/v2/백준/그래프/그래프.md
+++ b/v2/백준/그래프/그래프.md
@@ -8,7 +8,7 @@
 
 2178 실1 [미로 탐색](https://www.acmicpc.net/problem/2178) x
 
-14940 실1 [쉬운 최단거리](https://www.acmicpc.net/problem/14940)
+14940 실1 [쉬운 최단거리](https://www.acmicpc.net/problem/14940) x
 
 17836 골5 [공주님을 구해라!](https://www.acmicpc.net/problem/17836)
 
