--- a/v2/백준/그래프/그래프.md
+++ b/v2/백준/그래프/그래프.md
@@ -6,6 +6,8 @@
 
 18352 실2 [특정 거리의 도시 찾기](https://www.acmicpc.net/problem/18352) x
 
+11724 실2 [연결 요소의 개수](https://www.acmicpc.net/problem/11724) o
+
 1325 실1 [효율적인 해킹](https://www.acmicpc.net/problem/1325) x
 
 2178 실1 [미로 탐색](https://www.acmicpc.net/problem/2178) x
