feat: 1012 유기농 배추

--- a/v2/백준/그래프/그래프.md
+++ b/v2/백준/그래프/그래프.md
@@ -8,6 +8,8 @@
 
 11724 실2 [연결 요소의 개수](https://www.acmicpc.net/problem/11724) o
 
+1012 실2 [유기농 배추](https://www.acmicpc.net/problem/1012) x
+
 1325 실1 [효율적인 해킹](https://www.acmicpc.net/problem/1325) x
 
 2178 실1 [미로 탐색](https://www.acmicpc.net/problem/2178) x
