--- a/v2/백준/그래프/그래프.md
+++ b/v2/백준/그래프/그래프.md
@@ -12,6 +12,8 @@
 
 4963 실2 [섬의 개수](https://www.acmicpc.net/problem/4963) o
 
+5567 실2 [결혼식](https://www.acmicpc.net/problem/5567) x
+
 1325 실1 [효율적인 해킹](https://www.acmicpc.net/problem/1325) x
 
 2178 실1 [미로 탐색](https://www.acmicpc.net/problem/2178) x
