feat: 1차뉴스클러팅

--- a/v2/프로그래머스/lv2/정답지.md
+++ b/v2/프로그래머스/lv2/정답지.md
@@ -1,1 +1,3 @@
 ### 튜플 [링크](https://school.programmers.co.kr/learn/courses/30/lessons/64065) x
+
+### [1차] 뉴스 클러팅 [링크](https://school.programmers.co.kr/learn/courses/30/lessons/17677) x
