--- a/v2/프로그래머스/lv2/정답지.md
+++ b/v2/프로그래머스/lv2/정답지.md
@@ -1,3 +1,5 @@
 ### 튜플 [링크](https://school.programmers.co.kr/learn/courses/30/lessons/64065) x
 
 ### [1차] 뉴스 클러팅 [링크](https://school.programmers.co.kr/learn/courses/30/lessons/17677) x
+
+### 전화번호 목록 [링크](https://school.programmers.co.kr/learn/courses/30/lessons/42577) x
