tip: 숫자 순열과조합 추가

--- a/tip/순열과조합.md
+++ b/tip/순열과조합.md
@@ -1,3 +1,22 @@
+- 숫자 순열과 조합
+
+```ts
+// aCb => calculate(a,b)/calculate(b,b)
+// aPb => calculate(5,2)
+const calculate = (start: number, n: number) => {
+  let result = 1;
+  let temp = start;
+  for (let i = 0; i < n; i++) {
+    result *= temp;
+    temp -= 1;
+  }
+  return result;
+};
+
+console.log('5P2', calculate(5, 2));
+console.log('3C0', calculate(3, 0) / calculate(0, 0));
+```
+
 - 조합
 
 ```ts
