feat: 정리 - 코테 내용 추가

--- a/all-in-one/정리/코테.md
+++ b/all-in-one/정리/코테.md
@@ -38,20 +38,33 @@
 
 ### 5. 코딩테스트 시간복잡도
 
-- **코테 풀 때 과정**<br>
+- **코테 풀 때 과정**
 
+1.  문제 이해하기 -> 문제 이해 + 제약 조건 확인
+2.  접근 방법 (가장 중요)<br>
+3.  코드 설계<br>
+4.  코드 구현
 
-    1. 문제 이해하기<br>
-    2. 접근 방법 (가장 중요)<br>
-    3. 코드 설계<br>
-    4. 코드 구현
+```txt
+접근 방법
+1. 직관적으로 생각하기
+- 보통 완전탐색으로 시작
+- 문제 상황을 단순화 하여 생각하기
+- 문제 상황을 극한화 하여 생각하기
+2. 자료구조와 알고리즘 활용
+- 문제 이해에서 파악한 내용을 토대로 어떤 자료구조를 사용하는게 가장 적합한지 결정
+- 대놓고 특정 자료구조와 알고리즘을 묻는 문제들도 많음
+- 자료구조에 따라 선택할 수 있는 알고리즘을 문제에 적용
+3. 메모리 사용
+- 시간복잡도를 줄이기 위해 메모리를 사용하는 방법
+- 대표적으로 해시 테이블
+```
 
 - 시간 복잡도 활용 in 코테<br>
 
-
-    1. 시간복잡도 이해하고 외우기<br>
-    2. 제한 조건 보는 법<br>
-    3. 다양한 접근<br>
+  1. 시간복잡도 이해하고 외우기<br>
+  2. 제한 조건 보는 법<br>
+  3. 다양한 접근<br>
 
 - 제한 조건 보는 법<br>
 - 제약조건: 빅오 표기법에 n을 적용해서 넣었을 때 10^8(1초)을 넘지 않아야함<br>
