feat: 정리 - 코테 자료구조 종류 추가

--- a/all-in-one/정리/코테.md
+++ b/all-in-one/정리/코테.md
@@ -71,3 +71,14 @@
   ex) 1<=n<=10^5 -> nlogn, n, logn, 1<br>
   ex) 1<=n<=10^4 -> n^2(지양), nlogn, n, logn, 1<br>
   ex) 1<=n<=7 -> 작은 경우는 완탐이든, 비효율적이든지 답만 찾으면 됨
+
+### 6. 종류
+
+1. List
+2. Stack & Queue
+3. HashTable
+4. Tree
+5. Graph
+6. DP
+7. Dikstra
+8. 완탐
