--- a/v3/구현/구현.md
+++ b/v3/구현/구현.md
@@ -1,3 +1,3 @@
-### 1. 프로그래머스 [문자열 내 p와 y의 개수](https://school.programmers.co.kr/learn/courses/30/lessons/12916) 문자열
+### 1. 프로그래머스 lv1 [문자열 내 p와 y의 개수](https://school.programmers.co.kr/learn/courses/30/lessons/12916) 문자열 o
 
-### 2. 프로그래머스 [약수의 합](https://school.programmers.co.kr/learn/courses/30/lessons/12928) 약수?구현
+### 2. 프로그래머스 lv1 [약수의 합](https://school.programmers.co.kr/learn/courses/30/lessons/12928) 약수?구현 o
