feat: 프로그래머스/이진변환반복하기/구현,while

--- a/v3/구현/구현.md
+++ b/v3/구현/구현.md
@@ -3,3 +3,5 @@
 ### 2. 프로그래머스 lv1 [약수의 합](https://school.programmers.co.kr/learn/courses/30/lessons/12928) 약수?구현 o
 
 ### 3. 프로그래머스 lv2 [JadenCase 문자열 만들기](https://school.programmers.co.kr/learn/courses/30/lessons/12951) 문자열
+
+### 4. 프로그래머스 lv2 [이진 변환 반복하기](https://school.programmers.co.kr/learn/courses/30/lessons/70129) while
