feat: 백준1503/세수고르기/3중for문

--- a/v3/구현/구현.md
+++ b/v3/구현/구현.md
@@ -5,3 +5,5 @@
 ### 3. 프로그래머스 lv2 [JadenCase 문자열 만들기](https://school.programmers.co.kr/learn/courses/30/lessons/12951) 문자열
 
 ### 4. 프로그래머스 lv2 [이진 변환 반복하기](https://school.programmers.co.kr/learn/courses/30/lessons/70129) while
+
+### 5. 백준 1503 실2 [세 수 고르기](https://www.acmicpc.net/problem/1503) 3중 for문
