--- a/v3/구현/구현.md
+++ b/v3/구현/구현.md
@@ -7,3 +7,5 @@
 ### 4. 프로그래머스 lv2 [이진 변환 반복하기](https://school.programmers.co.kr/learn/courses/30/lessons/70129) while
 
 ### 5. 백준 1503 실2 [세 수 고르기](https://www.acmicpc.net/problem/1503) 3중 for문
+
+### 6. 백준 1541 실2 [잃어버린 괄호](https://www.acmicpc.net/problem/1541) 생각잘하기..
