feat: 백준1713/후보추천하기/hash-map

--- a/v3/구현/구현.md
+++ b/v3/구현/구현.md
@@ -9,3 +9,5 @@
 ### 5. 백준 1503 실2 [세 수 고르기](https://www.acmicpc.net/problem/1503) 3중 for문
 
 ### 6. 백준 1541 실2 [잃어버린 괄호](https://www.acmicpc.net/problem/1541) 생각잘하기..
+
+### 7. 백준 1713 실1 [후보 추천하기](https://www.acmicpc.net/problem/1713) hash-map
