feat: 프로그래머스/하노이의탑/재귀

--- a/v3/재귀/재귀.md
+++ b/v3/재귀/재귀.md
@@ -1,1 +1,3 @@
 ### 1. 백준 1992 실1 [쿼드트리](https://www.acmicpc.net/problem/1992) 재귀
+
+### 2. 프로그래머스 lv2 [하노이의 탑](https://school.programmers.co.kr/learn/courses/30/lessons/12946?language=javascript) 재귀
