feat: 리트코드/MultiplyStrings/문자열

--- a/v3/구현/구현.md
+++ b/v3/구현/구현.md
@@ -15,3 +15,5 @@
 ### 8. 백준 1913 실3 [달팽이](https://www.acmicpc.net/problem/1913) 2중 for문 o
 
 ### 9. 백준 2407 실3 [조합](https://www.acmicpc.net/problem/2407) 조합
+
+### 10. 리트코드 medium [Multiply Strings](https://leetcode.com/problems/multiply-strings/description/) 문자열
