--- a/v3/구현/구현.md
+++ b/v3/구현/구현.md
@@ -19,3 +19,5 @@
 ### 10. 리트코드 medium [Multiply Strings](https://leetcode.com/problems/multiply-strings/description/) 문자열
 
 ### 11. 리트코드 medium [Spiral Matrix](https://leetcode.com/problems/spiral-matrix/description/) 2차원 배열, while, 4방향
+
+### 12. 리트코드 easy [Add Binary](https://leetcode.com/problems/add-binary/) 2진수, bigint
