feat: 리트코드/SpiralMatrix2/2차원배열, while, 4방향

--- a/v3/구현/구현.md
+++ b/v3/구현/구현.md
@@ -21,3 +21,5 @@
 ### 11. 리트코드 medium [Spiral Matrix](https://leetcode.com/problems/spiral-matrix/description/) 2차원 배열, while, 4방향
 
 ### 12. 리트코드 easy [Add Binary](https://leetcode.com/problems/add-binary/) 2진수, bigint
+
+### 13. 리트코드 medium [Spiral Matrix2](https://leetcode.com/problems/spiral-matrix-ii/description/) 2차원 배열, while, 4방향 o
