--- a/v3/구현/구현.md
+++ b/v3/구현/구현.md
@@ -23,3 +23,5 @@
 ### 12. 리트코드 easy [Add Binary](https://leetcode.com/problems/add-binary/) 2진수, bigint
 
 ### 13. 리트코드 medium [Spiral Matrix2](https://leetcode.com/problems/spiral-matrix-ii/description/) 2차원 배열, while, 4방향 o
+
+### 14. 리트코드 easy [Add Digits](https://leetcode.com/problems/add-digits/description/) while, 배열 메서드 o
