feat: 백준22858/원상복구(small)/배열

--- a/v3/구현/구현.md
+++ b/v3/구현/구현.md
@@ -29,3 +29,5 @@
 ### 15 리트코드 medium [Game of Life](https://leetcode.com/problems/game-of-life/) 2차원 배열, 깊은 복사
 
 ### 16 리트코드 easy [FizzBuzz](https://leetcode.com/problems/fizz-buzz/description/) o
+
+### 17. 백준 22858 실3 [원상복구(small)](https://www.acmicpc.net/problem/22858) o 배열
